--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "3d_portfolio",
+  "homepage": "https://jasongithui.github.io/3d-techbiz",
+  "name": "3d-techbiz",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -7,7 +8,9 @@
     "dev": "vite",
     "build": "vite build",
     "lint": "eslint src --ext js,jsx --report-unused-disable-directives --max-warnings 0",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "dependencies": {
     "@emailjs/browser": "^3.11.0",
