--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://jasongithui.github.io/3d-techbiz",
+  "homepage": ".",
   "name": "3d-techbiz",
   "private": true,
   "version": "0.0.0",
@@ -20,7 +20,7 @@
     "maath": "^0.7.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.14.0",
+    "react-router-dom": "^6.17.0",
     "react-tilt": "^1.0.2",
     "react-vertical-timeline-component": "^3.6.0",
     "three": "^0.154.0"
