--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": ".",
+  "homepage": "https://jasongithui.github.io/3d-techbiz/",
   "name": "3d-techbiz",
   "private": true,
   "version": "0.0.0",
